# goldfish

./: README.md  notes.md  pyproject.toml
src/: models.py
src/core/: base_agent.py
src/prompting/: prompt_data.py  prompt_parts.py
